--- a/index.html.html
+++ b/index.html.html
@@ -18,11 +18,11 @@
         <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand fs-3 fw-bold" href="#">Motekar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-collapse collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link active fs-5" aria-current="page" href="#">Home</a>
                         <a class="nav-link fs-5" href="#menu">Menu</a>
